# Virtual-Shield

./: .dockerignore  .env.example  .env.vercel  .gitignore  .vercelignore  API_INTEGRATION_GUIDE.md  CHANGELOG.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_NOW.md  Dockerfile  MIGRATION_GUIDE.md  README.md  VERCEL_DEPLOYMENT.md  VERCEL_FILES_SUMMARY.md  VERCEL_FIX_APPLIED.md  ai_screenshot_detector.py  api_server.py  api_server_v2.py  backend_for_synthetic_ai_detection.py  config.py  debug_training.py  docker-compose.yml  pyproject.toml  requirements-full.txt  requirements.txt  start_servers.sh  test_text_detection.html  testing.py  train_text_detector.py  vercel.json
Instructions/: AI_TEXT_DETECTION_DEPLOYMENT_SUMMARY.md  COMMANDS.txt  QUICKSTART.md  SETUP.md  TEXT_DETECTION_README.md  TRAINING_GUIDE.md
Playground/: plt.py
api/: index.py
backend/: __init__.py
backend/app/: server.py
backend/config/: __init__.py  settings.py
backend/services/: __init__.py  custom_api.py  detector.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/app/api/analyze/: route.ts
services/: __init__.py  custom_api.py  detector.py  text_detector.py  text_extractor.py
web-app/: .env.local.example  Dockerfile.frontend  README.md  next.config.js  package-lock.json
web-app/app/: layout.tsx  page.tsx
web-app/app/api/analyze/: route.ts
web-app/lib/: utils.ts
